--- a/partials/_credentials.html
+++ b/partials/_credentials.html
@@ -1,1 +1,15 @@
 <div ui-sref="home">Voltar</div>
+
+<form name="credentialsForm" ng-submit="submit()">
+    <div>
+        <label>Matrícula:</label><br>
+        <input type="text" name="id" ng-model="user.id" required>
+        <span ng-show="(credentialsForm.id.$error.required && credentialsForm.id.$dirty)">Campo obrigatório!</span><br>
+    </div>
+    <div>
+        <label>Nome:</label><br>
+        <input type="text" name="name" ng-model="user.name" required>
+        <span ng-show="(credentialsForm.name.$error.required && credentialsForm.name.$dirty)">Campo obrigatório!</span><br>
+    </div>
+    <input type="submit" value="Começar">
+</form>
