--- a/partials/_credentials.html
+++ b/partials/_credentials.html
@@ -1,3 +1,8 @@
+<!--
+    Author: Auro Mota <auro@blueorc.com>
+    (c) 2016 BlueOrc http://blueorc.com/
+-->
+
 <div ui-sref="home">Voltar</div>
 
 <form name="credentialsForm" ng-submit="submit()">
