--- a/partials/_test-completed.html
+++ b/partials/_test-completed.html
@@ -5,4 +5,8 @@
 
 <div>
     <h3>Teste completo!</h3>
+
+    <p>Você acertou {{rightCount}} de {{total}} perguntas.
 </div>
+
+<div ui-sref="home">Ir para o início</div>
