--- a/partials/_logs.html
+++ b/partials/_logs.html
@@ -1,5 +1,34 @@
 <!--
-    Author: Auro Mota <auro@blueorc.com>
+    Author: Fabiano Lomonaco <auro@blueorc.com>
 -->
 
 <div ui-sref="home">Voltar</div>
+
+<h3>Testes realizados</h3>
+
+<div class="bs-component panel">
+    <table class="table table-hover table-responsive">
+        <thead>
+            <tr class="active table-text">
+                <th><center>Matrícula</center></th>
+                <th><center>Nome</center></th>
+                <th><center>Porcentagem de acerto</center></th>
+                <th><center>Feito em</center></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>10</td>
+                <td>Auro</td>
+                <td>80%</td>
+                <td>06/06/2016</td>
+            </tr>
+            <tr>
+                <td>20</td>
+                <td>Fabiano</td>
+                <td>82%</td>
+                <td>06/06/2016</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
