--- a/partials/_logs.html
+++ b/partials/_logs.html
@@ -1,5 +1,5 @@
 <!--
-    Author: Fabiano Lomonaco <auro@blueorc.com>
+    Author: Fabiano Lomonaco <fabiano.lomonaco.junior@gmail.com>
 -->
 
 <div ui-sref="home">Voltar</div>
