--- a/partials/_credentials.html
+++ b/partials/_credentials.html
@@ -2,18 +2,28 @@
     Author: Auro Mota <auro@blueorc.com>
 -->
 
-<div ui-sref="home">Voltar</div>
-
-<form name="credentialsForm" ng-submit="submit()">
-    <div>
-        <label>Matrícula:</label><br>
-        <input type="text" name="id" ng-model="user.id" required>
-        <span ng-show="(credentialsForm.id.$error.required && credentialsForm.id.$dirty)">Campo obrigatório!</span><br>
-    </div>
-    <div>
-        <label>Nome:</label><br>
-        <input type="text" name="name" ng-model="user.name" required>
-        <span ng-show="(credentialsForm.name.$error.required && credentialsForm.name.$dirty)">Campo obrigatório!</span><br>
-    </div>
-    <input type="submit" value="Começar">
-</form>
+<div>
+    <form class="form-horizontal col-lg-6" name="credentialsForm" ng-submit="submit()">
+        <fieldset>
+            <legend>Identificação</legend>
+            <div class="form-group" ng-class="{'has-error': (credentialsForm.id.$error.required && credentialsForm.id.$dirty)}">
+                <label for="id" class="col-lg-2 control-label">Matrícula</label>
+                <div class="col-lg-10">
+                    <input type="text" class="form-control" name="id" ng-model="user.id" required>
+                </div>
+            </div>
+            <div class="form-group" ng-class="{'has-error': (credentialsForm.name.$error.required && credentialsForm.name.$dirty)}">
+                <label for="name" class="col-lg-2 control-label">Nome:</label>
+                <div class="col-lg-10">
+                    <input type="text" class="form-control" name="name" ng-model="user.name" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-lg-10 col-lg-offset-2">
+                    <button ui-sref="home" class="btn btn-default">Voltar</button>
+                    <button type="submit" class="btn btn-primary">Começar</button>
+                </div>
+            </div>
+        </fieldset>
+    </form>
+</div>
