--- a/partials/_credentials.html
+++ b/partials/_credentials.html
@@ -2,6 +2,11 @@
     Author: Auro Mota <auro@blueorc.com>
 -->
 
+<ul class="breadcrumb">
+  <li><a ui-sref="home">Início</a></li>
+  <li class="active">Identificação</li>
+</ul>
+
 <div>
     <form class="form-horizontal col-lg-6" name="credentialsForm" ng-submit="submit()">
         <fieldset>
@@ -20,7 +25,7 @@
             </div>
             <div class="form-group">
                 <div class="col-lg-10 col-lg-offset-2">
-                    <button ui-sref="home" class="btn btn-default">Voltar</button>
+                    <button type="reset" class="btn btn-default">Cancelar</button>
                     <button type="submit" class="btn btn-primary">Começar</button>
                 </div>
             </div>
