--- a/partials/_logs.html
+++ b/partials/_logs.html
@@ -2,7 +2,10 @@
     Author: Fabiano Lomonaco <fabiano.lomonaco.junior@gmail.com>
 -->
 
-<div ui-sref="home">Voltar</div>
+<ul class="breadcrumb">
+  <li><a ui-sref="home">Início</a></li>
+  <li class="active">Relatórios</li>
+</ul>
 
 <h3>Testes realizados</h3>
 
