--- a/partials/_credentials.html
+++ b/partials/_credentials.html
@@ -1,5 +1,6 @@
 <!--
     Author: Auro Mota <auro@blueorc.com>
+            Fabiano Lomonaco <fabiano.lomonaco.junior@gmail.com>
 -->
 
 <ul class="breadcrumb">
