--- a/partials/_home.html
+++ b/partials/_home.html
@@ -1,11 +1,15 @@
 <!--
     Author: Auro Mota <auro@blueorc.com>
+            Fabiano Lomonaco <fabiano.lomonaco.junior@gmail.com>
 -->
 
-<div>
-    <h2>Bem-vindo!</h2>
-
-    <button ui-sref="credentials">Responda o quiz</button><br>
-    <button ui-sref="logs">Relatórios</button><br>
-
+<div class="row">
+    <div class="jumbotron">
+        <h1>Bem-vindo!</h1>
+        <p>O Web Quiz é uma plataforma online em que alunos podem responder questionários e professores podem obter relatórios de seu desempenho.</p>
+        <p class="jumbotron-btns">
+            <a class="btn btn-primary btn-lg" ui-sref="credentials">Responda</a>
+            <a class="btn btn-primary btn-lg" ui-sref="logs">Relatórios</a>
+        </p>
+    </div>
 </div>
