Test screen and breadcrumb fix

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,3 +5,8 @@
 .jumbotron-btns a:nth-child(2) {
     margin-left: 10px;
 }
+
+.btn-test {
+    margin-top: 20px;
+    margin-bottom: -20px !important;
+}
