--- a/partials/_test.html
+++ b/partials/_test.html
@@ -1,16 +1,51 @@
 <!--
     Author: Auro Mota <auro@blueorc.com>
+            Fabiano Lomonaco <fabiano.lomonaco.junior@gmail.com>
 -->
 
-<div>
-    <form ng-submit="submit()">
-        <h5>{{question.text}}</h5>
-        <input type="radio" ng-model="answer.answer" value="1">{{question.firstAnswer}}<br>
-        <input type="radio" ng-model="answer.answer" value="2">{{question.secondAnswer}}<br>
-        <input type="radio" ng-model="answer.answer" value="3">{{question.thirdAnswer}}<br>
-        <input type="radio" ng-model="answer.answer" value="4">{{question.fourthAnswer}}<br>
-        <input type="submit" ng-disabled="hasAnswered">
-    </form>
-</div>
+<ul class="breadcrumb">
+    <li><a ui-sref="home">Início</a></li>
+    <li><a ui-sref="credentials">Identificação</a></li>
+    <li class="active">Teste</li>
+</ul>
 
-<div ui-sref="home">Ir para o início</div>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <h3 class="panel-title">{{question.text}}</h3>
+    </div>
+    <div class="panel-body">
+        <form class="form-horizontal" ng-submit="submit()">
+            <fieldset>
+                <div class="form-group">
+                    <div class="col-lg-12">
+                        <div class="radio">
+                            <label>
+                                <input type="radio" ng-model="answer.answer" value="1">{{question.firstAnswer}}
+                            </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" ng-model="answer.answer" value="2">{{question.secondAnswer}}
+                            </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" ng-model="answer.answer" value="3">{{question.thirdAnswer}}
+                            </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" ng-model="answer.answer" value="4">{{question.fourthAnswer}}
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-lg-2 col-lg-offset-10">
+                            <button type="submit" class="btn btn-primary btn-test" ng-disabled="hasAnswered">Responder</button>
+                        </div>
+                    </div>
+                </div>
+            </fieldset>
+        </form>
+    </div>
+</div>
