--- a/partials/_test-completed.html
+++ b/partials/_test-completed.html
@@ -1,11 +1,20 @@
 <!--
     Author: Auro Mota <auro@blueorc.com>
+            Fabiano Lomonaco <fabiano.lomonaco.junior@gmail.com>
 -->
 
-<div>
+<ul class="breadcrumb">
+    <li><a ui-sref="home">Início</a></li>
+    <li><a ui-sref="credentials">Identificação</a></li>
+    <li><a>Teste</a></li>
+    <li class="active">Resultado</li>
+</ul>
+
+<div class="container result">
     <h3>Teste completo!</h3>
-
-    <p>Você acertou {{rightCount}} de {{total}} perguntas.
+    <p>Você acertou <strong>{{rightCount}}</strong> de <strong>{{total}}</strong> perguntas.</p>
+    <div class="progress">
+        <div class="progress-bar progress-bar-success" style="width: 60%;"></div>
+        <div class="progress-bar progress-bar-danger" style="width: 40%;"></div>
+    </div>
 </div>
-
-<div ui-sref="home">Ir para o início</div>
