--- a/partials/_test-completed.html
+++ b/partials/_test-completed.html
@@ -14,7 +14,7 @@
     <h3>Teste completo!</h3>
     <p>Você acertou <strong>{{rightCount}}</strong> de <strong>{{total}}</strong> perguntas.</p>
     <div class="progress">
-        <div class="progress-bar progress-bar-success" style="width: 60%;"></div>
-        <div class="progress-bar progress-bar-danger" style="width: 40%;"></div>
+        <div class="progress-bar progress-bar-success" progress-bar="right"></div>
+        <div class="progress-bar progress-bar-danger" progress-bar="wrong"></div>
     </div>
 </div>
