Progress bar in test

--- a/partials/_test.html
+++ b/partials/_test.html
@@ -48,4 +48,8 @@
             </fieldset>
         </form>
     </div>
+
+    <div class="progress">
+        <div class="progress-bar progress-bar-info" wq-progress-bar="left"></div>
+    </div>
 </div>
