--- a/partials/_logs.html
+++ b/partials/_logs.html
@@ -7,7 +7,14 @@
     <li class="active">Relatórios</li>
 </ul>
 
-<h3>Testes realizados</h3>
+<div>
+    <div class="col-lg-11">
+        <h3>Testes realizados</h3>
+    </div>
+    <div class="col-lg-1">
+        <a class="btn btn-danger" ng-click="clear()">Apagar</a>
+    </div>
+</div>
 
 <div class="bs-component panel">
     <table class="table table-hover table-responsive">
