--- a/partials/_test-details.html
+++ b/partials/_test-details.html
@@ -8,16 +8,16 @@
     <li class="active">Detalhes</li>
 </ul>
 
-<div class="container left-panel">
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h3 class="panel-tile">Resultado</h3>
-        </div>
-        <div class="panel-body">
-            123<br>
-            123
-        </div>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <h3 class="panel-title">Informações</h3>
+    </div>
+    <div class="panel-body">
+        <p><strong>Matrícula:</strong> {{data.user.id}}</p>
+        <p><strong>Usuário:</strong> {{data.user.name}}</p>
+        <p><strong>Desempenho:</strong> {{data.test.percentage | number: 2}}% ({{data.test.right}} acertos em {{data.test.total}} perguntas)</p>
+        <p><strong>Duração do teste:</strong> {{totalTime | number: 2}} s</p>
+        <div google-chart chart="questionTimeChart"></div>
     </div>
 </div>
 
-<div google-chart chart="testChart"></div>
