--- a/partials/_credentials.html
+++ b/partials/_credentials.html
@@ -26,7 +26,7 @@
             </div>
             <div class="form-group">
                 <div class="col-lg-10 col-lg-offset-2">
-                    <button type="reset" class="btn btn-default">Cancelar</button>
+                    <button type="reset" class="btn btn-default" ng-click="credentialsForm.setUntouched()">Cancelar</button>
                     <button type="submit" class="btn btn-primary">Começar</button>
                 </div>
             </div>
